# hostsfile

./: .gitignore  LICENSE.md  README.md  devenv.nix  justfile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
coredns/: Corefile  Dockerfile  docker-compose.yaml  plugin.cfg
hostsfile/: generate.py  generate_abp_file.py  generate_diff_file.py  generate_domains_file.py  generate_hosts_file.py  generate_overlap_file.py  types.py
hostsfile/download_hosts/: download_hosts.py  download_hosts_from_github.py  download_hosts_from_raw.py  types.py
hostsfile/update_sources/: generate_source_domains_file.py  generate_source_sleepers_file.py  is_domain_valid.py  try_resolve_domain.py  update_sources.py
sources/AdAway/: diff  github.json  sleepers
sources/Badd-Boyz-Hosts/: diff  github.json  sleepers
sources/KADhosts/: domains  github.json  sleepers
sources/StevenBlack/: diff  domains  github.json  sleepers
sources/URLHaus/: diff  domains  raw.json  sleepers
sources/UncheckyAds/: diff  github.json  sleepers
sources/add.2o7Net/: diff  github.json  sleepers
sources/add.Dead/: diff  github.json  sleepers
sources/add.Risk/: diff  github.json  sleepers
sources/add.Spam/: diff  github.json  sleepers
sources/hostsVN/: diff  github.json  sleepers
sources/mvps.org/: diff  domains  raw.json  sleepers
sources/oisd/: diff  raw.json  sleepers
sources/someonewhocares.org/: diff  domains  raw.json  sleepers
sources/tiuxo/: diff  github.json  sleepers
sources/yoyo.org/: diff  domains  raw.json  sleepers
(+1 files in other folders)
