[tool.poetry]
name = "hostsfile"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"

httpx = "^0.27.2"
anyio = "^4.6.2.post1"
dnspython = "^2.7.0"
validators = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.385"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
